[gd_scene load_steps=3 format=3 uid="uid://bdb4pmr6pm6jk"]

[ext_resource type="FontFile" uid="uid://25hcevfq64d4" path="res://fonts/Xolonium-Regular.ttf" id="1_4p688"]
[ext_resource type="Script" path="res://canvas_layer.gd" id="1_fbbsq"]

[node name="HUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_fbbsq")

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -79.5
offset_right = 240.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_4p688")
theme_override_font_sizes/font_size = 64
text = "dodge the creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 228.0
offset_top = 26.0
offset_right = 273.0
offset_bottom = 104.0
theme_override_fonts/font = ExtResource("1_4p688")
theme_override_font_sizes/font_size = 64
text = "0"

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 220.0
offset_right = 100.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_4p688")
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PauseLabel" type="Label" parent="."]
visible = false
offset_left = 149.0
offset_top = 191.0
offset_right = 358.0
offset_bottom = 269.0
theme_override_fonts/font = ExtResource("1_4p688")
theme_override_font_sizes/font_size = 64
text = "Pause"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
